# europatch

./: DOCKER_SETUP.md  Dockerfile  Footer.js  Knob.jsx  ModuleDetailPage.js  README.md  docker-compose.yml  globalStyles.js  init-db.sh  package.json  package.sh  patch_generator.py  requirements.txt  schema.sql  theme.js  verify_docker_setup.sh
backend/: Dockerfile  README.md  app.py  entrypoint.sh  init_packages.py  models.py  modulargrid_parser.py  pyproject.toml
backend/src/: __init__.py  cache_manager.py  init_db.py  main.py  models.py  modulargrid_parser.py  patch_generator.py  routes.py
backend/tests/: test_modulargrid_parser.py  test_real_modulargrid.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Knob.js
frontend/src/components/common/: Button.js  Knob.js
frontend/src/components/layout/: Header.js
frontend/src/pages/: Home.js  HomePage.js  PatchIdeasPage.js  RackAnalysisPage.js
