[tool.poetry]
name = "europatch-backend"
version = "0.1.0"
description = "Backend for the EuroPatch eurorack patch generation application"
authors = ["EuroPatch Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.0"
flask-cors = "^3.0.0"
flask-sqlalchemy = "^3.0.0"
requests = "^2.0.0"
beautifulsoup4 = "^4.0.0"
sqlalchemy = "^2.0.0"
praw = "^7.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"
init-db = "src.init_db:main"
